load_balancer_security_group.tf

# Create a new security group for the load balancer
resource "aws_security_group" "lb-sg" {
  name   = "lb-sg"
  vpc_id = aws_vpc.myvpc.id
  description = "allow all traffic"

  # HTTP access from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTPS access from anywhere
  # ingress {
  #   from_port   = 443
  #   to_port     = 443
  #   protocol    = "tcp"
  #   cidr_blocks = ["0.0.0.0/0"]
  # }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "lb-tesgSG"
  }
}
